syntax = "proto3";

package mcube.http;

option go_package = "github.com/infraboard/mcube/pb/http;http";
option java_package = "com.google.protobuf";
option java_outer_classname = "HttpProtos";
option csharp_namespace = "Google.Protobuf.Reflection";
option objc_class_prefix = "GPB";
option cc_enable_arenas = true;

// descriptor.proto must be optimized for speed because reflection-based
// algorithms don't work during bootstrapping.
option optimize_for = SPEED;

import "github.com/infraboard/protoc-gen-go-ext/extension/tag/tag.proto";
import "google/protobuf/descriptor.proto";

extend google.protobuf.MethodOptions {
    Entry rest_api = 20210228;
}

// Entry 路由条目
message Entry {
    string grpc_path = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"grpc_path" json:"grpc_path"'}
        ];
    string function_name = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"function_name" json:"function_name"'}
        ];
    string path = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"path" json:"path"'}
        ];
    string method = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"method" json:"method"'}
        ];
    string resource = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"resource" json:"resource"'}
        ];
    bool auth_enable = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"auth_enable" json:"auth_enable"'}
        ];
    bool permission_enable = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"permission_enable" json:"permission_enable"'}
        ];
    map<string, string> labels = 8[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"labels" json:"labels"'}
        ];
}